--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "esbuild": "^0.27.0",
     "framer-motion": "^12.0.5",
+    "glob": "^12.0.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -77,7 +79,7 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.11",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
